--- a/BlazorDate/Client/BlazorDate.Client.csproj
+++ b/BlazorDate/Client/BlazorDate.Client.csproj
@@ -7,12 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.2" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.4" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Shared\BlazorDate.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\GenderService\" />
+    <Folder Include="Services\PersonPreferenceService\" />
+    <Folder Include="Services\PreferenceService\" />
+    <Folder Include="Services\PictureService\" />
   </ItemGroup>
 
 </Project>
