--- a/BlazorDate/Server/appsettings.json
+++ b/BlazorDate/Server/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost\\sqlexpress;database=blazorcommerce;trusted_connection=true"
+    "DefaultConnection": "server=localhost\\sqlexpress;Database=BlazorDate;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"server=localhost\\sqlexpress;database=blazordate;trusted_connection=true"
+
   },
   "Logging": {
     "LogLevel": {
